--- a/server-side/Reading LENS example.ipynb
+++ b/server-side/Reading LENS example.ipynb
@@ -26,8 +26,8 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3>Client</h3>\n",
        "<ul>\n",
-       "  <li><b>Scheduler: </b>tcp://10.148.7.225:35489\n",
-       "  <li><b>Dashboard: </b><a href='http://localhost:8787/status' target='_blank'>http://localhost:8787/status</a>\n",
+       "  <li><b>Scheduler: </b>tcp://10.148.10.13:36098\n",
+       "  <li><b>Dashboard: </b><a href='http://localhost:8888/proxy/8787/status' target='_blank'>http://localhost:8888/proxy/8787/status</a>\n",
        "</ul>\n",
        "</td>\n",
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
@@ -42,7 +42,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: scheduler='tcp://10.148.7.225:35489' processes=0 cores=0>"
+       "<Client: scheduler='tcp://10.148.10.13:36098' processes=0 cores=0>"
       ]
      },
      "execution_count": 1,
@@ -57,20 +57,8 @@
     "\n",
     "from dask.distributed import Client\n",
     "from dask_jobqueue import PBSCluster\n",
-    "# Note dashboard link (relying on nbserverproxy) doesn't work right with\n",
-    "# dask-jobqueue v0.3.0; running\n",
-    "# $ conda uninstall dask-jobqueue\n",
-    "# $ pip install git+https://github.com/dask/dask-jobqueue\n",
-    "# to get dask-jobqueue-0.3.0+31.g4ea3c98 (or later)\n",
-    "# makes the dashboard link work but then cluster.scale() doesn't seem to submit any jobs?\n",
-    "# We should probably wait for next dask-jobqueue release\n",
     "\n",
     "# Lots of arguments to this command are set in ~/.config/dask/jobqueue.yaml\n",
-    "# Also note that jobqueue.yaml renders\n",
-    "#dask.config.set({'distributed.dashboard.link':'http://localhost:8888/proxy/{port}/status'})\n",
-    "dask.config.set({'distributed.dashboard.link':'http://localhost:{port}/status'})\n",
-    "# Obsolete... I think we want to recommend that for all cheyenne users along with nbserverproxy\n",
-    "\n",
     "# I intentionally did not put a project number in jobqueue.yaml to make it easier to share\n",
     "# Default queue is regular, but I am using premium because I am impatient\n",
     "# Default walltime is 30 minutes\n",
@@ -235,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
