--- a/server-side/Reading LENS example.ipynb
+++ b/server-side/Reading LENS example.ipynb
@@ -26,7 +26,7 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3>Client</h3>\n",
        "<ul>\n",
-       "  <li><b>Scheduler: </b>tcp://10.148.10.13:36098\n",
+       "  <li><b>Scheduler: </b>tcp://10.148.10.13:38822\n",
        "  <li><b>Dashboard: </b><a href='http://localhost:8888/proxy/8787/status' target='_blank'>http://localhost:8888/proxy/8787/status</a>\n",
        "</ul>\n",
        "</td>\n",
@@ -42,7 +42,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: scheduler='tcp://10.148.10.13:36098' processes=0 cores=0>"
+       "<Client: scheduler='tcp://10.148.10.13:38822' processes=0 cores=0>"
       ]
      },
      "execution_count": 1,
@@ -74,7 +74,7 @@
    "source": [
     "### Launch workers\n",
     "\n",
-    "Each worker is a compute node (with 36 cores). If you request `N` workers, then `N` single-node jobs will be submitted to the queue; work will be spread among available workers."
+    "Each worker is a process, and jobqueue.yaml is specifying a process as 4 cores (1/9 of a node). Therefore, if you request `9*N` workers, then `N` single-node jobs will be submitted to the queue; work will be spread among available workers."
    ]
   },
   {
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(5)"
+    "cluster.scale(9*5)"
    ]
   },
   {
@@ -148,14 +148,14 @@
       "      dtype=float32)\n",
       "Coordinates:\n",
       "    time     float64 6.753e+05\n",
-      "    ULAT     (nlat, nlon) float64 -78.95 -78.95 -78.95 -78.95 -78.95 -78.95 ...\n",
-      "    ULONG    (nlat, nlon) float64 321.1 322.3 323.4 324.5 325.6 326.8 327.9 ...\n",
+      "    ULAT     (nlat, nlon) float64 -78.95 -78.95 -78.95 ... 72.42 72.41 72.41\n",
+      "    ULONG    (nlat, nlon) float64 321.1 322.3 323.4 324.5 ... 319.2 319.6 320.0\n",
       "    z_t      float32 500.0\n",
       "    TLAT     (nlat, nlon) float64 dask.array<shape=(384, 320), chunksize=(384, 320)>\n",
       "    TLONG    (nlat, nlon) float64 dask.array<shape=(384, 320), chunksize=(384, 320)>\n",
       "Dimensions without coordinates: nlat, nlon\n",
-      "CPU times: user 2.02 s, sys: 76 ms, total: 2.1 s\n",
-      "Wall time: 8.37 s\n"
+      "CPU times: user 3.71 s, sys: 104 ms, total: 3.82 s\n",
+      "Wall time: 8.68 s\n"
      ]
     }
    ],
@@ -183,8 +183,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.3 s, sys: 4.02 s, total: 6.33 s\n",
-      "Wall time: 3.52 s\n"
+      "CPU times: user 2.84 s, sys: 4.02 s, total: 6.86 s\n",
+      "Wall time: 3.08 s\n"
      ]
     },
     {
@@ -194,7 +194,9 @@
        "<Figure size 648x360 with 2 Axes>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "needs_background": "light"
+     },
      "output_type": "display_data"
     }
    ],
